Close UnifiedSystemTray on settings button click.

We should explicitly close UnifiedSystemTray when the settings button is
clicked.

TEST=manual
BUG=853610

Change-Id: I029396b33a3bdde0d64e5b89a01c53ba38e72f96
Reviewed-on: https://chromium-review.googlesource.com/1103436
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568324}
Former-commit-id: b7f74552281eeadb079f038f66b6d31494ab592e